# hip_sycl_dft

./: .clangd  CMakeLists.txt  README.md  main.cpp
dft_backend_cufft/: CMakeLists.txt  sycl_dft_cufft.cpp  sycl_dft_cufft.h
dft_backend_fftw/: CMakeLists.txt  sycl_dft_fftw.cpp  sycl_dft_fftw.h
dft_backend_rocfft/: CMakeLists.txt  sycl_dft_rocfft.cpp  sycl_dft_rocfft.h
src/: CMakeLists.txt  sycl_dft.cpp  sycl_dft.h  sycl_dft_internal.h
